# ananda-nam

./: .gitignore  README.md
server/: Cargo.toml  Makefile  diesel.toml
server/.devcontainer/: Dockerfile  devcontainer.json
server/migrations/2023-12-01-102840_create_tables/: down.sql  up.sql
server/src/: consts.rs  errors.rs  main.rs  routes.rs  schema.rs
server/src/db/: mod.rs
server/src/handlers/: groups.rs  mod.rs  schools.rs  streams.rs  user.rs  years.rs
server/src/middleware/: auth.rs  mod.rs
server/src/utils/: token.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
ui/.devcontainer/: Dockerfile  devcontainer.json
ui/src/: App.vue  axiosClient.ts  i18n.ts  main.ts
ui/src/assets/: main.css
ui/src/components/: SidebarNavLink.vue
ui/src/locales/: en.json  ru.json
ui/src/models/: Group.ts  Person.ts  School.ts  Stream.ts  Year.ts
ui/src/router/: index.ts
ui/src/store/: auth.ts  groups.ts  layout.ts  persons.ts  schools.ts  streams.ts  token.ts  years.ts
ui/src/views/: ForbiddenView.vue  GroupsView.vue  HomeView.vue  LayoutView.vue  LoginView.vue  PersonsView.vue  SchoolsView.vue  StreamsView.vue  YearsView.vue
